# stock_experts

./: .gitignore  README.en.md  README.ja.md  README.ko.md  README.md  user_idea.txt
backend/: check_admin_password.py  check_db.py  check_users.py  config.example.yaml  config.yaml  create_admin.py  inspect_sina_api.py  migrate_add_columns.py  migrate_financial_metrics.py  migrate_market_indicators.py  pyproject.toml  research_all_fields.py  test_admin_api.py  test_akshare_financial.py  test_akshare_financial2.py  test_all_fixes.py  test_all_indicators.py  test_api.py  test_data_collection.py  test_issues.py  test_login.py  test_portfolio_indicators.py  test_stocks_with_indicators.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: admin.py  agent.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  backtest.py  books.py  chat.py  data.py  debate.py  filters.py  (+6 more)
backend/app/models/: __init__.py  agent.py  chat.py  filter.py  notification.py  portfolio.py  stock.py  strategy.py  system.py  user.py
backend/app/scheduler/: __init__.py  jobs.py
backend/app/schemas/: __init__.py
backend/app/scripts/: create_admin.py
backend/app/services/: chat_pipeline.py  settings_service.py  task_manager.py
backend/app/utils/: exceptions.py  security.py
backend/scripts/: migrate_db.py  seed_master_agents.py
backend/scripts/masters/: 利弗莫尔.md  塔勒布.md  巴菲特.md  彼得·林奇.md  格雷厄姆.md  现代价值分析.md  索罗斯.md  芒格.md  费雪.md
backend/tests/: test_audit.py  test_authz.py  test_backtesting.py  test_chat.py  test_indicators.py  test_quant.py  test_sandbox.py
(+100 files in other folders)
